--- a/style.css
+++ b/style.css
@@ -37,12 +37,20 @@ ul {
     justify-content: space-between;
     color: whitesmoke;
 }
+.menu-btn{
+    display: none;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    cursor: pointer;
+    font-size: 32px;
+}
 
 /*HEader*/
 header{
     width: 100vw;
     height: 100vh;
-    background-image: url(./img/1.jpg);
+    background-image: url(./img/4.jpg);
     background-size: cover;
     background-position: top;
 
@@ -86,4 +94,42 @@ margin-bottom: 30px;
     background-color: red;
     border-radius: 30px;
     color: whitesmoke;
+}
+/*Mobile Responsive Desing*/
+@media only screen and (max-width:850px){
+.navbar{
+    padding: 0;
+}
+.menu-btn{
+    display: block;
+}
+.logo{
+    position: absolute;
+    top: 30px;
+    left: 30px;
+}
+.nav-links{
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    background-color: #484872;
+    margin-top: -1000px;
+    transition: all 0.5s ease;
+}
+.nav-links li {
+    margin: 30px auto;
+}
+.mobile-menu-open{
+    margin-top: 0;
+}
+.header-content{
+    margin: auto 0;
+}
+.header-content h1{
+    font-size: 2rem;
+}
+.header-content h2{
+    font-size: 1.5rem;
+}
 }
